# Diploma

./: Diploma Beta.docx  genetic algorithm.docx  ~$актика2.doc  ~$горитмы.docx  ~WRL0001.tmp  Алгоритмы.docx  Для Кравченко.docx  Завдання_диплом.doc  Завдання_диплом_Кравченко.doc  Инструкция.docx  Практика2.doc  Функція витрат.docx
Code/Algorithms/: CMakeLists.txt  cost.cpp  cost.h  genetratin_params.h  main.cpp  props.cpp  simulating_annealing.cpp
Code/Part1/: CMakeLists.txt  main.c  write_test.txt  Задание 10.txt
Code/SBox/: CMakeLists.txt  a.out  main.cpp  result.txt  sbox.cpp  sbox.h  settings.txt  test.txt
Code/SBox1/: CMakeLists.txt  main.cpp
Code/info/: CMakeLists.txt  file.txt  main.cpp  props.h  simulating_annealing.h
Code/untitled/: main.cpp
